javafx nervt so