@@ -28,3 +28,13 @@ lazy val root = project
     libraryDependencies += "com.typesafe.play" %% "play-json" % "2.10.3",
     libraryDependencies += "org.scala-lang.modules" %% "scala-xml" % "2.2.0"
   )
+
+fork := true
+connectInput := true
+
+javaOptions in run ++= Seq(
+"--module-path",
+"javafx-sdk-21.0.1/lib",
+"--add-modules",
+"javafx.controls,javafx.fxml,javafx.web"
+)
